--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+	<head>
+		<title>Gasolineras</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/main.css">
+	</head>
+	<body ng-app="app">
+		<h1 class="title">GASOLINERAS</h1>
+		<div ui-view></div>
+
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=es"></script>
+		<script src="js/vendor/angular/angular.js"></script>
+		<script src="js/vendor/ui-router/release/angular-ui-router.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/services/stationsService.js"></script>
+		<script src="js/services/locationService.js"></script>
+		<script src="js/controllers/StationController.js"></script>
+		<script src="js/controllers/NearStationsController.js"></script>
+		<script src="js/controllers/HomeController.js"></script>
+	</body>
 </html>
