Make the go button bigger and act on tap instead of click

--- a/public/js/templates/home.html
+++ b/public/js/templates/home.html
@@ -1,1 +1,1 @@
-<a href="#/nearstations" class="button lightgreen">Show me the money!</a>
+<a href="#/nearstations" class="button lightgreen">GO</a>
