--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,12 @@ ul {
 }
 
 .lightgreen {
+	border: 2px solid #D0D102;
+	font-size: 28px;
+	line-height: 100px;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
 	background-color: #61AE24;
 }
 
