--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,16 @@
 		<h1 class="title">GASOLINERAS</h1>
 		<div ui-view></div>
 
+		<script src="js/vendor/swiftclick/js/libs/swiftclick.js"></script>
+		<script>
+			var swiftclick = SwiftClick.attach(document.body);
+		</script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=es"></script>
 		<script src="js/vendor/angular/angular.js"></script>
 		<script src="js/vendor/ui-router/release/angular-ui-router.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/services/stationsService.js"></script>
 		<script src="js/services/locationService.js"></script>
-		<script src="js/controllers/StationController.js"></script>
 		<script src="js/controllers/NearStationsController.js"></script>
 		<script src="js/controllers/HomeController.js"></script>
 	</body>
