Refactor NearStationsController and created a map service

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/services/stationsService.js"></script>
 		<script src="js/services/locationService.js"></script>
+		<script src="js/services/mapService.js"></script>
 		<script src="js/controllers/NearStationsController.js"></script>
 		<script src="js/controllers/HomeController.js"></script>
 	</body>
