--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
 		<script src="js/vendor/angular/angular.js"></script>
 		<script src="js/vendor/ui-router/release/angular-ui-router.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/app.config.js"></script>
 		<script src="js/services/stationsService.js"></script>
 		<script src="js/services/locationService.js"></script>
 		<script src="js/services/mapService.js"></script>
