--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,12 @@
 	<head>
 		<title>Gasolineras</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body ng-app="app">
 		<h1 class="title">GASOLINERAS</h1>
-		<div ui-view></div>
+		<div class="container" ui-view></div>
 
 		<script src="js/vendor/swiftclick/js/libs/swiftclick.js"></script>
 		<script>
@@ -16,12 +17,15 @@
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=es"></script>
 		<script src="js/vendor/angular/angular.js"></script>
 		<script src="js/vendor/ui-router/release/angular-ui-router.js"></script>
+
 		<script src="js/app.js"></script>
 		<script src="js/app.config.js"></script>
 		<script src="js/services/stationsService.js"></script>
+		<script src="js/services/authService.js"></script>
 		<script src="js/services/locationService.js"></script>
 		<script src="js/services/mapService.js"></script>
 		<script src="js/controllers/NearStationsController.js"></script>
 		<script src="js/controllers/HomeController.js"></script>
+		<script src="js/controllers/LoginController.js"></script>
 	</body>
 </html>
