--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,12 +20,23 @@
 
 		<script src="js/app.js"></script>
 		<script src="js/app.config.js"></script>
+
+		<!-- services -->
 		<script src="js/services/stationsService.js"></script>
 		<script src="js/services/authService.js"></script>
 		<script src="js/services/locationService.js"></script>
 		<script src="js/services/mapService.js"></script>
-		<script src="js/controllers/NearStationsController.js"></script>
-		<script src="js/controllers/HomeController.js"></script>
-		<script src="js/controllers/LoginController.js"></script>
+
+		<!-- nearstations module -->
+		<script src="js/nearstations/nearstations.module.js"></script>
+		<script src="js/nearstations/nearstations.js"></script>
+
+		<!-- home module -->
+		<script src="js/home/home.module.js"></script>
+		<script src="js/home/home.js"></script>
+
+		<!-- login module -->
+		<script src="js/login/login.module.js"></script>
+		<script src="js/login/login.js"></script>
 	</body>
 </html>
