--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
 		<title>Gasolineras</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="js/vendor/angularjs-toaster/toaster.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body ng-app="app">
 		<h1 class="title">GASOLINERAS</h1>
+		<toaster-container toaster-options="{'position-class': 'toast-top-full-width'}"></toaster-container>
 		<div class="container" ui-view></div>
 
 		<script src="js/vendor/swiftclick/js/libs/swiftclick.js"></script>
@@ -15,8 +17,12 @@
 			var swiftclick = SwiftClick.attach(document.body);
 		</script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=es"></script>
+
+		<!-- bower components -->
 		<script src="js/vendor/angular/angular.js"></script>
 		<script src="js/vendor/ui-router/release/angular-ui-router.js"></script>
+		<script src="js/vendor/angular-animate/angular-animate.js"></script>
+		<script src="js/vendor/angularjs-toaster/toaster.js"></script>
 
 		<script src="js/app.js"></script>
 		<script src="js/app.config.js"></script>
@@ -26,6 +32,10 @@
 		<script src="js/services/authService.js"></script>
 		<script src="js/services/locationService.js"></script>
 		<script src="js/services/mapService.js"></script>
+
+		<!-- dashbaord -->
+		<script src="js/dashboard/dashboard.module.js"></script>
+		<script src="js/dashboard/dashboard.js"></script>
 
 		<!-- nearstations module -->
 		<script src="js/nearstations/nearstations.module.js"></script>
