--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,15 +7,12 @@
 		<link rel="stylesheet" href="js/vendor/angularjs-toaster/toaster.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
-	<body ng-app="app">
+	<body ng-app="app" swift-click>
 		<h1 class="title">GASOLINERAS</h1>
 		<toaster-container toaster-options="{'position-class': 'toast-top-full-width'}"></toaster-container>
 		<div class="container" ui-view></div>
 
 		<script src="js/vendor/swiftclick/js/libs/swiftclick.js"></script>
-		<script>
-			var swiftclick = SwiftClick.attach(document.body);
-		</script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=es"></script>
 
 		<!-- bower components -->
@@ -26,6 +23,10 @@
 
 		<script src="js/app.js"></script>
 		<script src="js/app.config.js"></script>
+
+		<!-- common -->
+		<script src="js/common/common.module.js"></script>
+		<script src="js/common/swiftclick.directive.js"></script>
 
 		<!-- services -->
 		<script src="js/services/stationsService.js"></script>
